# keyhook

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
crates/keyhook/: Cargo.toml  tauri.conf.json
crates/keyhook-model/: Cargo.toml  README.md
crates/keyhook-model/src/: lib.rs
crates/keyhook-ui/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/keyhook-ui/src/: app.rs
crates/keyhook/capabilities/: default.json
crates/keyhook/src/: config.rs  lib.rs  logger.rs  main.rs  model.rs
