[workspace]
resolver = "2"
members = [
  "crates/keyhook-model",
  "crates/keyhook",
  "crates/keyhook-ui",
]

[workspace.package]
authors = ["lvillis<lvillis@outlook.com>"]
homepage = "https://github.com/lvillis/keyhook"
repository = "https://github.com/lvillis/keyhook"
documentation = "https://github.com/lvillis/keyhook/blob/main/README.md"
edition = "2024"
rust-version = "1.87"
license = "MIT"
exclude = [
  "/docs/",
  "/tests/",
  "/.config/",
  "/.github/",
  "/.justfile",
  "/rust-toolchain.toml",
  "/.gitignore",
  "Dockerfile",
  "docker-compose.yaml",
  "/grn/"
]
keywords = ["tauri", "hotkey", "webhook", "automation", "desktop"]

[workspace.dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
once_cell = "1.21.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }

# tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time"] }

keyhook = { path = "crates/keyhook", version = "0.1" }
keyhook-ui = { path = "crates/keyhook-ui", version = "0.1" }
keyhook-model = { path = "crates/keyhook-model", version = "0.1" }

[workspace.metadata.release]
shared-version = true
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "chore: release version {{version}}"
pre-release-commit-message = "chore: release version {{version}}"
pre-release-hook = ["git", "cliff", "--workdir", "../", "--output", "../../CHANGELOG.md", "--tag", "{{version}}"]
