[package]
name = "keyhook-model"
description = "Shared data models for KeyHook."
version = "0.1.2"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
exclude = { workspace = true }

[dependencies]
serde = { workspace = true }
