[package]
name = "keyhook"
description = "⌨️ Global Hotkeys → Webhooks — one desktop app to trigger any HTTP request."
version = "0.1.9"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
exclude = { workspace = true }
readme = "../../README.md"
keywords = { workspace = true }
categories = ["gui", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keyhook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }

tauri-plugin-opener = "2.2.7"
tauri-plugin-global-shortcut = "2.2.1"

anyhow = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

keyhook-model = { workspace = true }
